--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1,11 +1,26 @@
 @charset 'UTF-8';
 
 html {
-	--primary-color: #2980b9; 
-	--info-color: #ecf0f1;
-	--success-color: #27ae60;
-	--warning-color: #f39c12;
-	--danger-color: #c0392b;
+	--belize-hole-color: #2980b9; 
+	--clouds-color: #ecf0f1;
+	--nephritis-color: #27ae60;
+	--pumpkin-color: #f39c12;
+	--pomegranate-color: #c0392b;
+	--wet-asphalt-color: #34495e;
+	--midnight-blue-color: #2c3e50;
+	--black-color: #1e1e1e;
+}
+
+html, body {
+	margin: 0;
+	padding: 0;
+	width: 100%;
+	height: 100%;
+}
+
+body {
+	color: var(--black-color);
+	font-family: Arial;
 }
 
 button.rounded-button {
@@ -17,9 +32,35 @@ button.rounded-button {
 
 hr.separator {
 	width: 30px;
-	border: 2px solid;
+	border: 2px solid var(--clouds-color);
+}
+
+.section-title {
+	color: var(--clouds-color);
+	font-weight: bold;
+	font-size: 
 }
 
 .section-subtitle {
-	max-width: 100px;
+	max-width: 600px;
+	color: var(--clouds-color);
+	margin-left: auto;
+	margin-right: auto;
+	font-weight: lighter;
+	font-size: 18px;
+}
+
+.container {
+	display: -webkit-box;
+	display: -webkit-flex;
+  	display: -ms-flexbox;
+  	display: flex;
+  	width: 100%;
+}
+
+#contact_section {
+	text-align: center;
+	padding: 60px;
+	background-color: var(--wet-asphalt-color);
+	margin-bottom: 40px;
 }
