--- a/public/css/app.css
+++ b/public/css/app.css
@@ -4,6 +4,7 @@ html {
 	--belize-hole-color: #2980b9; 
 	--clouds-color: #ecf0f1;
 	--black-color: #1e1e1e;
+	--blue-color: #2AA6DC;
 }
 
 html, body {
@@ -19,7 +20,7 @@ body {
 }
 
 button.rounded-button {
-	border: 2px solid var(--belize-hole-color);
+	border: 2px solid var(--blue-color);
 	padding: 15px 30px 15px 30px;
 	background-color: transparent;
 	border-radius: 25px;
@@ -27,8 +28,8 @@ button.rounded-button {
 }
 
 button.rounded-button:hover {
-	color: var(--black-color) !important;
-	background-color: var(--clouds-color);
+	/*color: var(--black-color) !important;*/
+	background-color: var(--blue-color);
 }
 
 #about_button {
@@ -36,12 +37,12 @@ button.rounded-button:hover {
 	margin-top: 30px;
 	margin-left: -50%;
 	color: var(--clouds-color);
-	border-color: var(--clouds-color);
+	border-color: var(--blue-color);
 }
 
 hr.separator {
 	width: 30px;
-	border: 2px solid var(--clouds-color);
+	border: 2px solid var(--blue-color);
 	margin-top: 30px;
 	margin-bottom: 30px;
 }
@@ -49,7 +50,7 @@ hr.separator {
 #home_section {
 	width: 100%;
 	height: 100%;
-    background-image: url(../images/bg-default.jpg);
+    background-image: url(../images/bg-default-bis.jpg);
 	background-repeat: no-repeat;
 	-webkit-background-size: cover;
 	-moz-background-size: cover;
