--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1,14 +1,13 @@
 @charset 'UTF-8';
+@import url('contacts.css');
 
 html {
-	--belize-hole-color: #2980b9; 
-	--clouds-color: #ecf0f1;
-	--nephritis-color: #27ae60;
-	--pumpkin-color: #f39c12;
-	--pomegranate-color: #c0392b;
-	--wet-asphalt-color: #34495e;
-	--midnight-blue-color: #2c3e50;
+	--primary-color: #2980b9; 
+	--success-color: #27ae60;
+	--warning-color: #f39c12;
+	--danger-color: #c0392b;
 	--black-color: #1e1e1e;
+	--white-color: #ecf0f1;
 }
 
 html, body {
@@ -26,24 +25,23 @@ body {
 button.rounded-button {
 	border: 2px solid var(--primary-color);
 	padding: 10px 20px;
-	background: var(--info-color);
+	background: var(--white-color);
 	border-radius: 25px;
 }
 
 hr.separator {
 	width: 30px;
-	border: 2px solid var(--clouds-color);
+	border: 2px solid var(--white-color);
 }
 
 .section-title {
-	color: var(--clouds-color);
+	color: var(--white-color);
 	font-weight: bold;
-	font-size: 
 }
 
 .section-subtitle {
 	max-width: 600px;
-	color: var(--clouds-color);
+	color: var(--white-color);
 	margin-left: auto;
 	margin-right: auto;
 	font-weight: lighter;
@@ -61,4 +59,5 @@ hr.separator {
   	display: -ms-flexbox;
   	display: flex;
   	flex-direction: row;
+  	flex-wrap: wrap;
 }
