--- a/public/css/contacts.css
+++ b/public/css/contacts.css
@@ -1,6 +1,7 @@
 .contact-link {
-	margin-right: 25px;
 	margin-left: 25px;
+	margin-right: 25px;
+	margin-top: 25px;
 	width: 201px;
 }
 
@@ -16,10 +17,9 @@
 #contact_section {
 	text-align: center;
 	padding: 60px;
-	background-color: var(--wet-asphalt-color);
+	background-color: #34495e;
 }
 
-#contact_section .container {
-	margin-top: 50px;
-	max-width: 700px;
+#contact_links {
+	justify-content: center;
 }
