Résolution des problèmes dûs à la Merge Request

--- a/public/css/home.css
+++ b/public/css/home.css
@@ -2,7 +2,7 @@
 	width: 100%;
 	margin-top: 30px;
 	color: var(--white-color);
-	border-color: var(--blue-color);
+	border-color: var(--primary-color);
 }
 
 #about_button_container {
@@ -10,14 +10,14 @@
 }
 
 #home_section {
-	width: 100%;
-	height: 100%;
-    background-image: url(../images/bg-default-bis.jpg);
+	background-image: url('../images/bg-default.jpg');
 	background-repeat: no-repeat;
 	-webkit-background-size: cover;
 	-moz-background-size: cover;
 	-o-background-size: cover;
 	background-size: cover;
+	width: 100%;
+	height: 100%;
 }
 
 #home_background {
@@ -26,10 +26,14 @@
 	left: 0;
 	right: 0;
 	bottom: 0;
-	background-color: rgba(0, 0, 0, .5);
 	color: var(--white-color);
+	background-color: rgba(0, 0, 0, .5);
 }
 
 #home_div {
 	margin-top: 15%;
+}
+
+#home_separator {
+	border: 2px solid var(--primary-color);
 }
