--- a/public/css/app.css
+++ b/public/css/app.css
@@ -2,20 +2,20 @@
 @import url('home.css');
 @import url('contacts.css');
 
-html {
+:root {
 	--primary-color: #2980b9; 
 	--success-color: #27ae60;
 	--warning-color: #f39c12;
 	--danger-color: #c0392b;
 	--black-color: #1e1e1e;
 	--white-color: #ecf0f1;
-  --blue-color: #2aa6dc;
 }
 
 html, body {
 	margin: 0; 
 	padding: 0;
 	width: 100%;
+	height: 100%;
 }
 
 body {
@@ -24,7 +24,7 @@ body {
 }
 
 button.rounded-button {
-	border: 2px solid var(--blue-color);
+	border: 2px solid var(--primary-color);
 	padding: 15px 30px 15px 30px;
 	background-color: transparent;
 	border-radius: 25px;
@@ -32,7 +32,7 @@ button.rounded-button {
 }
 
 button.rounded-button:hover {
-	background-color: var(--blue-color);
+	background-color: var(--primary-color);
 }
 
 hr.separator {
@@ -41,7 +41,8 @@ hr.separator {
 }
   
 .section-title {
-	font-style: bold;
+	font-weight: bold;
+	color: var(--white-color);
 	width: 100%;
 	text-align: center;
 	font-size: 80px;
@@ -55,8 +56,9 @@ hr.separator {
 	margin-right: auto;
 	font-weight: lighter;
 	font-size: 18px;
-	margin-top: 30px;
 	margin-bottom: 30px;
+	text-align: center;
+	opacity: .9;
 }
 
 .block-center {
