--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1,6 +1,7 @@
 @charset 'UTF-8';
 @import url('home.css');
 @import url('contacts.css');
+@import url('footer.css');
 
 :root {
 	--primary-color: #2980b9; 
@@ -47,6 +48,7 @@ hr.separator {
 	text-align: center;
 	font-size: 80px;
 	margin-bottom: auto;
+	margin-top: 0;
 }
 
 .section-subtitle {
