--- a/public/css/contacts.css
+++ b/public/css/contacts.css
@@ -20,6 +20,10 @@
 	text-decoration: none;
 }
 
+.contact-link > a:hover {
+	text-decoration: underline;
+}
+
 .contact-link > a > i {
 	margin-bottom: 10px;
 }
