--- a/public/css/app.css
+++ b/public/css/app.css
@@ -80,3 +80,22 @@ hr.separator {
   	flex-direction: row;
   	flex-wrap: wrap;
 }
+
+.google-maps {
+    position: relative;
+    padding-bottom: 35%;
+    height: 0;
+    overflow: hidden;
+}
+
+.google-maps iframe {
+    position: absolute;
+	top: 0;
+    left: 0;
+    right: 0;
+    width: 100% !important;
+    height: 100% !important;
+    max-width: 700px;
+    margin-left: auto;
+    margin-right: auto;
+}
