--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1,6 +1,7 @@
 @charset 'UTF-8';
 @import url('home.css');
 @import url('navbar.css');
+@import url('registration.css');
 @import url('contacts.css');
 @import url('footer.css');
 
