--- a/public/css/app.css
+++ b/public/css/app.css
@@ -2,6 +2,7 @@
 @import url('home.css');
 @import url('navbar.css');
 @import url('foyer.css');
+@import url('prices.css');
 @import url('registration.css');
 @import url('contacts.css');
 @import url('footer.css');
