--- a/public/css/app.css
+++ b/public/css/app.css
@@ -4,6 +4,7 @@
 @import url('foyer.css');
 @import url('animations.css');
 @import url('prices.css');
+@import url('feedbacks.css');
 @import url('registration.css');
 @import url('contacts.css');
 @import url('footer.css');
