--- a/public/css/administration/administration.css
+++ b/public/css/administration/administration.css
@@ -1,6 +1,7 @@
 @import url('../app.css');
 @import url('home.css');
 @import url('student_home.css');
+@import url('animations.css');
 @import url('prices.css');
 @import url('contacts.css');
 @import url('sign_in.css');
