--- a/public/css/app.css
+++ b/public/css/app.css
@@ -3,6 +3,7 @@
 @import url('navbar.css');
 @import url('foyer.css');
 @import url('animations.css');
+@import url('places.css');
 @import url('prices.css');
 @import url('feedbacks.css');
 @import url('registration.css');
