--- a/public/css/website/navbar.css
+++ b/public/css/website/navbar.css
@@ -1,12 +1,12 @@
 .topnav {
-    background-color: var(--black-color);
+    background-color: white;
     overflow: hidden;
 }
 
 .topnav a {
     float: left;
     display: block;
-    color: var(--white-color);
+    color: var(--darkblue-color);
     text-align: center;
     padding: 14px 16px;
     text-decoration: none;
@@ -14,8 +14,7 @@
 }
 
 .topnav a:hover {
-    background-color: var(--white-color);
-    color: black;
+    color: rgba(41, 128, 185, .7);
 }
 
 #navbar_title a {
@@ -23,8 +22,7 @@
 }
 
 .active {
-    background-color: var(--primary-color);
-    color: var(--white-color);
+    color: var(--primary-color) !important;
 }
 
 .topnav .icon {
@@ -47,22 +45,30 @@
 }
  
 @media screen and (max-width: 1100px) {
-  .topnav a:not(:first-child) {display: none;}
+
+  .topnav a:not(:first-child) {
+    display: none;
+  }
+
   .topnav a.icon {
     float: right;
     display: block;
   }
+
 }
 
 @media screen and (max-width: 1100px) {
+
   .topnav.responsive a.icon {
     position: relative;
     right: 0;
     top: 0;
   }
+
   .topnav.responsive a {
     float: none;
     display: block;
     text-align: left;
   }
+
 } 
